# backend

./: .env.test  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose-test.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-compose-tests.yml
alembic/: env.py
alembic/versions/: 0ef3cdf64010_add_tags_is_admin_is_moderator_to_user.py  127959d37051_delete_index_true.py  1296eb630d66_add_participation_table.py  1344d5d37d86_init_user_table.py  14af79e286cc_delete_index_true.py  17c88d299129_add_user_subscription_relationship_with_.py  296effb09a76_add_place_table_relationship_with_event.py  39b5a0df3498_cascade_delete_for_usersubscription.py  466f5ee69dc4_disable_index_for_event_place_.py  4e9bc6b1ed66_add_category_table.py  54e9832835f7_fix_size_of_strings.py  6c0a53b9fb26_in_event_url_is_not_required.py  94fedb533740_add_organizationsubscription_table.py  a33aef10a7dd_delete_index_true.py  aa1826abe1cc_init_event_table_relation_between_event_.py  b12324e0d236_add_organization_id_in_event_table.py  b4cdfb0e3619_add_table_organization.py  b64c3b4ede90_add_is_active_in_user_table.py  c76de7afa966_delete_tags_organizations.py  ce958fc1a566_create_user_table.py  d89a16e88480_add_table_user_organization.py  efe72bc0154b_add_url_field_for_event.py  f0a2f7ecdd72_add_image_uuid4_to_user.py  f7b8c438d7ba_add_is_owner_to_user_organization.py  fa2784a17577_cascade_delete_for_events.py
backend/: config.py  database.py  utils.py
backend/api/dependencies/: database.py  dropbox.py  event.py  organization.py  user.py
backend/api/routes/: api.py  category.py  current_user_exist.py  (+4 more)
backend/crud/: __init__.py  base.py  category.py  event.py  organization.py  organization_subscription.py  participation.py  place.py  user.py  user_organization.py  user_subscription.py
backend/database/: base.py  base_class.py  session.py  session_test.py
backend/models/: category.py  event.py  organization.py  organization_subscription.py  participation.py  place.py  user.py  user_organization.py  user_subscription.py
backend/resources/: strings.py
backend/routers/: authentication.py  category.py  current_user_exist.py  dependencies.py  event.py  map.py  me.py  organization.py  personal_events.py  place.py  user.py
backend/schemas/: azure.py  category.py  event.py  organization.py  organization_subscription.py  organization_with_members.py  participation.py  place.py  subscription.py  user.py  user_organization.py  user_subscription.py
backend/services/: event.py  organization.py
scripts/: init_categories.py  init_places.py  provide_admin_rights.py
tests/: conftest.py  utils.py
tests/api/: conftest.py  test_current_user_exist.py  test_me.py
tests/crud/: test_event.py  test_user.py
(+16 files in other folders)
