[tool.poetry]
name = "fefu-events-backend"
version = "0.1.0"
description = ""
authors = ["Andrey Varfolomeev <andreika.varfolomeev@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
alembic = "^1.7.7"
FastAPI-SQLAlchemy = "^0.2.1"
psycopg2 = "^2.9.3"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
python-dotenv = "^0.20.0"
fastapi-azure-auth = "^3.3.0"
sqlmodel = "^0.0.6"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["all"], version = "^1.4.1"}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.pyright]
include = ["backend"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10.2"

